<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">



    <data>
        <variable name="viewmodel"
            type="com.antonin.friendswave.ui.viewModel.EventFragmentViewModel"/>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="26sp"
            android:text="@string/activity_event_perso"
            android:gravity="center">
        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="26sp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/add_event_private"
            android:gravity="center">
        </TextView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_my_event_private"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_gravity="center" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="26sp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/add_event_public"
            android:gravity="center">
        </TextView>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_my_event_public"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_gravity="center" />


    </LinearLayout>
</layout>