<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <data>
        <variable name="viewmodel"
            type="com.antonin.friendswave.ui.viewModel.EventFragmentViewModel" />
        <variable name="viewmodelContact"
            type="com.antonin.friendswave.ui.viewModel.ContactViewModel" />
        <variable name="clef"
        type="String"/>

    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="24sp"
            android:fontFamily="@font/roboto_mono"
            android:gravity="center"
            android:text="@string/add_event_title"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/roboto_mono"
            android:gravity="center"
            android:text="@string/detail_event_infos"
            android:textSize="26sp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView260"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:fontFamily="@font/roboto_mono"
                android:gravity="center"
                android:text="@string/add_event_name"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/textView300"
                android:layout_width="0dp"
                android:gravity="center"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_mono"
                android:inputType="text"
                android:text="@={viewmodel.eventDataPublic.name}" />

            <ImageView
                android:id="@+id/stylo6"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:layout_weight="0.3"
                android:src="@drawable/stylo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView26"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:fontFamily="@font/roboto_mono"
                android:gravity="center"
                android:text="@string/add_event_lieu"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/textView30"
                android:layout_width="0dp"
                android:gravity="center"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_mono"
                android:text="@={viewmodel.eventDataPublic.adress}" />

            <ImageView
                android:id="@+id/stylo1"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:layout_weight="0.3"
                android:src="@drawable/stylo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView33"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:fontFamily="@font/roboto_mono"
                android:gravity="center"
                android:text="@string/add_event_date"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/textView34"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:inputType="date"
                android:fontFamily="@font/roboto_mono"
                android:tooltipText="format dd/mm/yyyy"
                android:text="@={viewmodel.eventDataPublic.date}" />



            <ImageView
                android:id="@+id/stylo2"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:layout_weight="0.3"
                android:src="@drawable/stylo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView35"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:fontFamily="@font/roboto_mono"
                android:gravity="center"
                android:text="@string/add_event_heure"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/textView36"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:fontFamily="@font/roboto_mono"
                android:inputType="datetime"
                android:tooltipText="format 00:00"
                android:text="@={viewmodel.eventDataPublic.heure}" />

            <ImageView
                android:id="@+id/stylo3"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:layout_weight="0.3"
                android:src="@drawable/stylo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView37"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:fontFamily="@font/roboto_mono"
                android:gravity="center"
                android:text="@string/detail_event_duration"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/textView38"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_mono"
                android:inputType="number"
                android:text="@={``+viewmodel.eventDataPublic.duree}" />

            <ImageView
                android:id="@+id/stylo4"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:layout_weight="0.3"
                android:src="@drawable/stylo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView24"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:fontFamily="@font/roboto_mono"
                android:gravity="center"
                android:text="@string/detail_event_nbre_inscrit"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="0.6"
                android:fontFamily="@font/roboto_mono"
                android:text="@{viewmodel.eventDataPublic.nbrePersonnes.toString()}" />

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/activity_manage_my_event_go_to_chat"
            android:fontFamily="@font/roboto_mono"
            android:backgroundTint="@color/teal_200"
            android:textColor="@color/black"
            android:onClick="@{(v) -> viewmodel.startGroupChat(v, viewmodel.eventDataPublic.key, viewmodel.eventDataPublic.admin)}">

        </Button>

        <TextView
            android:id="@+id/textView39"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             />

        <TextView
            android:id="@+id/textView40"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_mono"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/activity_manage_my_event_search"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editTextTextPersonName3"
            android:layout_width="300dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/roboto_mono"
            android:inputType="textPersonName"
            android:text="@={viewmodel.email}"
            android:importantForAutofill="no"
            tools:ignore="LabelFor" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto_mono"
            android:gravity="center"
            android:onClick="@{() -> viewmodel.sendAnInvitationPrivateEvent(clef)}"
            android:text="@string/send" />

        <TextView
            android:id="@+id/textView41"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_mono"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/detail_event_inscrit"
            android:textSize="24sp" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_my_event_inscrits"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/roboto_mono"
            android:gravity="center"
            android:text="@string/activity_manage_my_event_pending_participants"
            android:textSize="26sp"/>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_pending_participants"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_gravity="center" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/btn_delete_my_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/recycler_delete"
                app:backgroundTint="#E57373" />

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/btn_save_my_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/save"
                android:onClick="@{() -> viewmodel.editEvent()}"/>

        </LinearLayout>


    </LinearLayout>
    </ScrollView>
</layout>