<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">



    <data>
        <variable name="viewmodel"
            type="com.antonin.friendswave.ui.viewModel.EventFragmentViewModel"/>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/activity_event_inscrit"
            android:textSize="26sp"></TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/activity_event_confirm"
            android:textSize="26sp"></TextView>

        <View
            android:id="@+id/view12"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="#7986CB" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_my_event_inscrits"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_gravity="center" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/activity_event_pending"
            android:textSize="26sp"></TextView>


        <View
            android:id="@+id/view13"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="#7986CB" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_pending_participants"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_gravity="center" />


    </LinearLayout>
</layout>