<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>
        <variable name="view"
            type="com.antonin.friendswave.ui.viewModel.HomeFragmentViewModel"/>
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.home.SignalementActivity">

    <LinearLayout
        android:id="@+id/signalementLayout"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="2"
            android:fontFamily="@font/roboto_mono"
            android:gravity="center"
            android:text="@string/titre_signalement_activity"
            android:textSize="24sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="0"
            android:fontFamily="@font/roboto_mono"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/custom_shape"
            android:text="@string/warning_signalement_activity"
            android:textSize="24sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="2"
            android:fontFamily="@font/roboto_mono"
            android:layout_marginLeft="10dp"
            android:paddingTop="10dp"
            android:text="@string/description_signalement_activity"
            android:textSize="24sp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:fontFamily="@font/roboto_mono"
            android:text="@string/description_signalement_activity"
            android:textSize="24sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/rectangle"/>

        <EditText
            android:layout_height="200dp"
            android:layout_width="fill_parent"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_shape"
            android:inputType="textMultiLine"
            android:gravity="top"
            android:padding="10dp"
            android:text="@={view.messSignalement}"
            >
        </EditText>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Envoyer"
            android:onClick="@{() -> view.sendSignalement()}"
            android:layout_gravity="center">

        </Button>

        </LinearLayout>
    </RelativeLayout>

</layout>